# AI-workspace-assistant

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  plan.md  pyproject.toml  seed.py
ai_assistant_code.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
app/: config.py  database.py  exceptions.py  main.py
app/models/: base.py
app/modules/: auth.py
app/modules/agent/domain/: models.py
app/modules/agent/providers/: base.py  claude_provider.py  command_provider.py
app/modules/agent/schemas/: agent_schemas.py
app/modules/agent/service/: agent_service.py  provider_factory.py
app/modules/git/service/: git_service.py
app/modules/project/: api.py  schemas.py  service.py
app/modules/ticket/api/: routes.py
app/modules/ticket/domain/: models.py
app/modules/ticket/repository/: ticket_repository.py
app/modules/ticket/schemas/: ticket_schemas.py
app/modules/ticket/service/: ticket_queue.py  ticket_service.py
app/modules/ticket/use_cases/: create_ticket.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  label.tsx  select.tsx  tabs.tsx  textarea.tsx
frontend/src/stores/: auth-store.ts  ticket-store.ts
tests/: test_ticket_api.py
